{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 0,
  "lineage": "ffc39694-3a93-2bc9-329b-9b63cb2bcac4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAT_EIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bce8410e31769e3",
            "association_id": "eipassoc-072813666ba0cd030",
            "domain": "vpc",
            "id": "eipalloc-00bce8410e31769e3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-025007dcafc23df33",
            "private_dns": "ip-10-0-0-124.ec2.internal",
            "private_ip": "10.0.0.124",
            "public_dns": "ec2-52-1-210-170.compute-1.amazonaws.com",
            "public_ip": "52.1.210.170",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "env": "vbraun"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0371b109d7dd25e54",
            "arn": "arn:aws:ec2:us-east-1:797918408294:instance/i-0ce434cb86506f037",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce434cb86506f037",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "vbraun",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c5402fb6359b8361",
            "private_dns": "ip-10-0-0-51.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.51",
            "public_dns": "ec2-3-81-250-68.compute-1.amazonaws.com",
            "public_ip": "3.81.250.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01833ca9f43537f53",
                "volume_size": 20,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03123314dbda4ac9f",
            "tags": {
              "Name": "vbraun-EC2"
            },
            "tags_all": {
              "Name": "vbraun-EC2",
              "env": "vbraun"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0339eb9af60d35c0f"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone",
            "data.aws_ssm_parameter.instance_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:internet-gateway/igw-01f5cd705dc733201",
            "id": "igw-01f5cd705dc733201",
            "owner_id": "797918408294",
            "tags": {
              "Name": "vbraun-IGW"
            },
            "tags_all": {
              "Name": "vbraun-IGW",
              "env": "vbraun"
            },
            "vpc_id": "vpc-099502b30f0be7526"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00bce8410e31769e3",
            "connectivity_type": "public",
            "id": "nat-0c3f35c510847fa63",
            "network_interface_id": "eni-025007dcafc23df33",
            "private_ip": "10.0.0.124",
            "public_ip": "52.1.210.170",
            "subnet_id": "subnet-03123314dbda4ac9f",
            "tags": {
              "Name": "vbraun-NGW"
            },
            "tags_all": {
              "Name": "vbraun-NGW",
              "env": "vbraun"
            }
          },
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0528600027e258f5c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c3f35c510847fa63",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0528600027e258f5c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAT_EIP",
            "aws_nat_gateway.main_nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01f5cd705dc733201",
            "id": "r-rtb-04a85d00d32419b5b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04a85d00d32419b5b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main_igw",
            "aws_route_table.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:route-table/rtb-0528600027e258f5c",
            "id": "rtb-0528600027e258f5c",
            "owner_id": "797918408294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c3f35c510847fa63",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vbraun-PrivateRT"
            },
            "tags_all": {
              "Name": "vbraun-PrivateRT",
              "env": "vbraun"
            },
            "timeouts": null,
            "vpc_id": "vpc-099502b30f0be7526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:route-table/rtb-04a85d00d32419b5b",
            "id": "rtb-04a85d00d32419b5b",
            "owner_id": "797918408294",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01f5cd705dc733201",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vbraun-PublicRT"
            },
            "tags_all": {
              "Name": "vbraun-PublicRT",
              "env": "vbraun"
            },
            "timeouts": null,
            "vpc_id": "vpc-099502b30f0be7526"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a6ad080da0fe8fbc",
            "route_table_id": "rtb-0528600027e258f5c",
            "subnet_id": "subnet-09274e72a00c65926"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064875ce1e1285247",
            "route_table_id": "rtb-0528600027e258f5c",
            "subnet_id": "subnet-0d83e026ded97d5f0"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b845a0423f59c9f",
            "route_table_id": "rtb-04a85d00d32419b5b",
            "subnet_id": "subnet-03123314dbda4ac9f"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c320828ea4def712",
            "route_table_id": "rtb-04a85d00d32419b5b",
            "subnet_id": "subnet-0584166076a80bf8c"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-09274e72a00c65926",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09274e72a00c65926",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vbraun-PrivateSubnet-us-east-1a"
            },
            "tags_all": {
              "Name": "vbraun-PrivateSubnet-us-east-1a",
              "env": "vbraun"
            },
            "vpc_id": "vpc-099502b30f0be7526"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-0d83e026ded97d5f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d83e026ded97d5f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vbraun-PrivateSubnet-us-east-1b"
            },
            "tags_all": {
              "Name": "vbraun-PrivateSubnet-us-east-1b",
              "env": "vbraun"
            },
            "vpc_id": "vpc-099502b30f0be7526"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-03123314dbda4ac9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03123314dbda4ac9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vbraun-PublicSubnet-us-east-1a"
            },
            "tags_all": {
              "Name": "vbraun-PublicSubnet-us-east-1a",
              "env": "vbraun"
            },
            "vpc_id": "vpc-099502b30f0be7526"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:subnet/subnet-0584166076a80bf8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0584166076a80bf8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "797918408294",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "vbraun-PublicSubnet-us-east-1b"
            },
            "tags_all": {
              "Name": "vbraun-PublicSubnet-us-east-1b",
              "env": "vbraun"
            },
            "vpc_id": "vpc-099502b30f0be7526"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.availability_zone"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:797918408294:vpc/vpc-099502b30f0be7526",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d6e5fc6c158f43b9",
            "default_route_table_id": "rtb-03a2ef39d77c95d67",
            "default_security_group_id": "sg-0339eb9af60d35c0f",
            "dhcp_options_id": "dopt-0b0655287249fb28a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-099502b30f0be7526",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-06de4c2e5f574aaec",
            "ipv6_cidr_block": "2600:1f10:4b2c:ab00::/56",
            "ipv6_cidr_block_network_border_group": "us-east-1",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a2ef39d77c95d67",
            "owner_id": "797918408294",
            "tags": {
              "Name": "vbraun"
            },
            "tags_all": {
              "Name": "vbraun",
              "env": "vbraun"
            }
          }
        }
      ]
    }
  ]
}